--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   peek_and_pop: ^1.0.3
   scroll_snap_list: ^0.8.4
   get: ^4.6.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +48,6 @@ dev_dependencies:
   adaptive_action_sheet: ^2.0.0
   http: ^0.13.4
   flappy_search_bar:
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
