--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,26 +30,37 @@ dependencies:
   cupertino_icons: ^1.0.2
   bouncing_widget: ^2.0.0
   peek_and_pop: ^1.0.3
-  scroll_snap_list: ^0.8.4
+  scroll_snap_list: ^0.9.1
   get: ^4.6.1
   intl: ^0.17.0
   shared_preferences: ^2.0.13
+  like_button:
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   custom_navigation_bar:
-  shimmer: ^1.1.1
-  shake_animation_widget: ^1.0.0
+  shimmer: ^2.0.0
+  shake_animation_widget:
   image_picker: ^0.8.2
-  flutter_spinkit: "^4.1.2"
+  flutter_spinkit: ^5.1.0
   google_fonts:
-  like_button:
   adaptive_action_sheet: ^2.0.0
   http: ^0.13.4
   flappy_search_bar:
-  image_cropper: ^1.0.2
+  image_cropper: ^2.0.3
   get_storage: ^2.0.3
+  another_flushbar: ^1.10.28
+  readmore: ^2.1.0
+  marquee:
+  flutter_mentions: ^2.0.1
+  linkfy_text: ^1.1.5
+  animated_button: ^0.2.0
+  scale_button: ^2.1.2
+  flutter_button: ^0.0.4
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -63,8 +74,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - assets/inks.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
